--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
    "version": "0.0.1",
    "description": "Awesome project developed with TypeORM.",
    "type": "commonjs",
+   "main": "index.js",
    "devDependencies": {
       "@types/cors": "^2.8.12",
       "@types/node": "^16.11.10",
@@ -21,7 +22,7 @@
    },
    "scripts": {
       "tsc": "tsc",
-      "start": "ts-node src/index.ts",
+      "start": "node index.js",
       "typeorm": "typeorm-ts-node-commonjs"
    }
 }
